new watch only page

--- a/features.html
+++ b/features.html
@@ -103,8 +103,9 @@
             </div>
             <div class="row">
                 <div class="feature-item">
-                  <h3 id="sentinel"><i class="icon-eye"></i> Watch-only wallets</h3>
-                  <p>Watch-only wallets allow you to keep an eye on your cold storage without touching your private key. Easily import your address or xpub and watch it from your app without ever touching it.</p>
+                  <h3 id="Watch-only"><i class="icon-eye"></i> Watch-only wallets</h3>
+                  <p>Watch-only wallets allows you to keep an eye on your cold storage without touching your private key. Easily import your address or xpub and watch it from your app without ever touching it.</p>
+                  <a href="/watch-only">Read more →</a>
                 </div>
             </div>
             <div class="row">
@@ -214,6 +215,7 @@
           <a href="/features.html"><span class="foot-menu">Features</span></a>
           <a href="/bitcoin-wallet"><span class="foot-menu">Bitcoin wallet</span></a>
           <a href="/lightning"><span class="foot-menu">Lightning wallet</span></a>
+          <a href="/watch-only"><span class="foot-menu">Watch-only</span></a>
           <a href="/lapps"><span class="foot-menu">Lapp marketplace</span></a>
           <a href="/watch-app"><span class="foot-menu">Watch-app</span></a>
         </div>
@@ -221,10 +223,10 @@
         <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="privacy.txt">Privacy</a>
+            <a href="/privacy.txt">Privacy</a>
           </li>
           <li class="list-inline-item">
-            <a href="terms.txt">Terms</a>
+            <a href="/terms.txt">Terms</a>
           </li>
         </ul>
   </div>
