--- a/bitcoin-wallet/index.html
+++ b/bitcoin-wallet/index.html
@@ -122,7 +122,8 @@
               <div>
                 <img src="../img/watch-only.png">
                 <h3>Watch-only</h3>
-                <p>The watch-only wallet as the name indicates it’s a wallet that allows you to keep an eye on your balance and receive transactions without touching your private key. To use it import it to the import wallet option on the create wallet screen.</p>
+                <p>The watch-only wallet as the name indicates it’s a wallet that allows you to keep an eye on your balance and receive transactions without touching your private key. To use it import it to the import wallet option on the create wallet screen.<br />
+                  <a href="/watch-only"><strong>Read more</strong></a></p>
               </div>
               <!-- 
               <div>
@@ -204,6 +205,7 @@
           <a href="/features.html"><span class="foot-menu">Features</span></a>
           <a href="/bitcoin-wallet"><span class="foot-menu">Bitcoin wallet</span></a>
           <a href="/lightning"><span class="foot-menu">Lightning wallet</span></a>
+          <a href="/watch-only"><span class="foot-menu">Watch-only</span></a>
           <a href="/lapps"><span class="foot-menu">Lapp marketplace</span></a>
           <a href="/watch-app"><span class="foot-menu">Watch-app</span></a>
         </div>
@@ -211,10 +213,10 @@
         <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="privacy.txt">Privacy</a>
+            <a href="/privacy.txt">Privacy</a>
           </li>
           <li class="list-inline-item">
-            <a href="terms.txt">Terms</a>
+            <a href="/terms.txt">Terms</a>
           </li>
         </ul>
   </div>
