--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                     <li><a class="sublink" href="/features.html">View all</a></li>
                     <li><a class="sublink" href="/bitcoin-wallet">Bitcoin Wallets</a></li>
                     <li><a class="sublink" href="/lightning">Lightning Wallets</a></li>
+                     <li><a class="sublink" href="/watch-only">Watch-only Wallets</a></li>
                     <li><a class="sublink" href="/lapps">Lapp Marketplace</a></li> 
                     <li><a class="sublink" href="/watch-app">Watch App</a></li> 
                   </ul>
@@ -216,7 +217,7 @@
                   </a>
                 </div>
                 <div class="row">
-                  <a href="/features.html#sentinel">
+                  <a href="/features.html#watch-only">
                     <div class="feature-item">
                         <h3><i class="icon-eye"></i> Watch-only wallets <span class="badge badge-primary">new</span></h3>
                         <p>Watch-only wallets allow you to keep an eye on your cold storage without touching the hardware.</p>
@@ -348,6 +349,7 @@
           <a href="/features.html"><span class="foot-menu">Features</span></a>
           <a href="/bitcoin-wallet"><span class="foot-menu">Bitcoin wallet</span></a>
           <a href="/lightning"><span class="foot-menu">Lightning wallet</span></a>
+          <a href="/watch-only"><span class="foot-menu">Watch-only</span></a>
           <a href="/lapps"><span class="foot-menu">Lapp marketplace</span></a>
           <a href="/watch-app"><span class="foot-menu">Watch-app</span></a>
         </div>
@@ -355,10 +357,10 @@
         <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="privacy.txt">Privacy</a>
+            <a href="/privacy.txt">Privacy</a>
           </li>
           <li class="list-inline-item">
-            <a href="terms.txt">Terms</a>
+            <a href="/terms.txt">Terms</a>
           </li>
         </ul>
       </div>
