--- a/lightning/index.html
+++ b/lightning/index.html
@@ -263,7 +263,20 @@
       </div>
     </section>
 
-
+<section class="download text-center" id="download">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 mx-auto">
+            <h2 class="section-heading">Crafted for <strong>iOS</strong> and <strong>android</strong><br />by <strong>Bitcoin users</strong></h2>
+            <!-- <p>Our app is available on any mobile device! Download now to get started!</p> -->
+            <div class="badges">
+              <a class="badge-link" href="https://itunes.apple.com/app/bluewallet-bitcoin-wallet/id1376878040" target="_blank"><img src="../img/app-store-badge-white.svg" alt="app store link"></a>
+              <a class="badge-link" href="https://play.google.com/store/apps/details?id=io.bluewallet.bluewallet" target="_blank"><img src="../img/play-store-badge-white.svg" alt="play store link"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
   </div> <!-- page div -->
@@ -275,6 +288,7 @@
           <a href="/features.html"><span class="foot-menu">Features</span></a>
           <a href="/bitcoin-wallet"><span class="foot-menu">Bitcoin wallet</span></a>
           <a href="/lightning"><span class="foot-menu">Lightning wallet</span></a>
+          <a href="/watch-only"><span class="foot-menu">Watch-only</span></a>
           <a href="/lapps"><span class="foot-menu">Lapp marketplace</span></a>
           <a href="/watch-app"><span class="foot-menu">Watch-app</span></a>
         </div>
@@ -282,10 +296,10 @@
         <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="privacy.txt">Privacy</a>
+            <a href="/privacy.txt">Privacy</a>
           </li>
           <li class="list-inline-item">
-            <a href="terms.txt">Terms</a>
+            <a href="/terms.txt">Terms</a>
           </li>
         </ul>
   </div>
