--- a/watch-app/index.html
+++ b/watch-app/index.html
@@ -174,6 +174,7 @@
           <a href="/features.html"><span class="foot-menu">Features</span></a>
           <a href="/bitcoin-wallet"><span class="foot-menu">Bitcoin wallet</span></a>
           <a href="/lightning"><span class="foot-menu">Lightning wallet</span></a>
+          <a href="/watch-only"><span class="foot-menu">Watch-only</span></a>
           <a href="/lapps"><span class="foot-menu">Lapp marketplace</span></a>
           <a href="/watch-app"><span class="foot-menu">Watch-app</span></a>
         </div>
@@ -181,10 +182,10 @@
         <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="privacy.txt">Privacy</a>
+            <a href="/privacy.txt">Privacy</a>
           </li>
           <li class="list-inline-item">
-            <a href="terms.txt">Terms</a>
+            <a href="/terms.txt">Terms</a>
           </li>
         </ul>
       </div>
