--- a/watch-only/index.html
+++ b/watch-only/index.html
@@ -43,8 +43,8 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- og:tags -->
-    <meta property="og:image" content="https://bluewallet.io/img/lightning-wallet2.png" />
-    <meta name="twitter:image" content="https://bluewallet.io/img/lightning-wallet2.png" />
+    <meta property="og:image" content="https://bluewallet.io/img/watch-only-hero.png" />
+    <meta name="twitter:image" content="https://bluewallet.io/img/watch-only-hero.png" />
 
     <meta property="og:site_name" content="BlueWallet - Bitcoin wallet" />
     <meta property="og:type" content="website" />
