--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -73,7 +73,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://www.bitrefill.com/embed/lightning?ref=erF6mfho?utm_source=bluewallet">
+            <a href="https://www.bitrefill.com/embed/lightning?ref=erF6mfho&utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/bitrefill.png">
