--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -332,7 +332,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="apptext">
                         <h2>Bandit vs. Sheriff</h2>
                         <p>Lightning Duel</p>
-                        <div class="new"></div>
                     </div>
                 </div>
             </a>
@@ -381,6 +380,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
+            <a href="https://lightningnetworkstores.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/lnstores.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>LNstores</h2>
+                        <p>Lightning Network Stores</p>
+                        <div class="new"></div>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
             <a href="https://yalls.org/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
@@ -419,6 +432,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="apptext">
                         <h2>Bitcoin tunnels</h2>
                         <p>Bitcoin products and merchadising</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://cryptobrekkie.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/brekkie.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Crypto Brekkie</h2>
+                        <p>Brekkie von Bitcoin</p>
+                        <div class="new"></div>
                     </div>
                 </div>
             </a>
@@ -539,7 +566,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="apptext">
                         <h2>layer One</h2>
                         <p>The Bitcoin store of value</p>
-                        <div class="new"></div>
                     </div>
                 </div>
             </a>
