add bech32 to wallets information

--- a/bitcoin-wallet/index.html
+++ b/bitcoin-wallet/index.html
@@ -115,9 +115,9 @@
                 <p>The Bitcoin Lightning wallet can be used on custodial fashion or non-custodial if you run your own node. This wallet provides the ability to receive lightning out of the box and send payments as well. It is powered by our opensource LNDhub solution.<br /><a href="/lightning"><strong>Read more</strong></a></p>
               </div>
               <div>
-                <img src="../img/segwit.png">
-                <h3>Single address</h3>
-                <p>The Single address Bitcoin wallet, its a Segwit compatible wallet that always will have the same receiving address. This use case its useful if you want an unique address to receive donations for instance. This wallet also supports RBF.</p>
+                <img src="../img/bech32.png">
+                <h3>Bech32 wallet</h3>
+                <p>Native Segwit addresses wallet, this are the latest in terms of technology and they allow you to save up to 40% in fees. To access them go to your settings and turn on the "advanced mode", after go to the create wallet option.</p>
               </div>
               <div>
                 <img src="../img/watch-only.png">
@@ -125,13 +125,12 @@
                 <p>The watch-only wallet as the name indicates it’s a wallet that allows you to keep an eye on your balance and receive transactions without touching your private key. To use it import it to the import wallet option on the create wallet screen.<br />
                   <a href="/watch-only"><strong>Read more</strong></a></p>
               </div>
-              <!-- 
               <div>
-                <img src="../img/strike.png">
-                <h3>Strike wallet</h3>
-                <p>Strike wallets are an available 3rd party integration within bluewallet. It allows you to import your strike Point-of-sale wallet, check your balance and generate invoices to be paid on the go by your clients.</p>
+                <img src="../img/segwit.png">
+                <h3>Single address</h3>
+                <p>The Single address Bitcoin wallet, its a Segwit compatible wallet that always will have the same receiving address. This use case its useful if you want an unique address to receive donations for instance. This wallet also supports RBF.</p>
               </div>
-            -->
+          
               <div>
                 <img src="../img/bread.png">
                 <h3>Bread/BRD</h3>
