--- a/features.html
+++ b/features.html
@@ -141,7 +141,7 @@
               <div class="row">
                   <div class="feature-item">
                       <h3 id="multiple_wallets"><i class="icon-wrench"></i> Multiple wallets support</h3>
-                      <p><strong>blue wallet</strong> aims to support maximum wallet standards. Currently supported: BIP44 (HD), BIP49 (HD SegWit), BIP39 Breadwallet-compatible (m/0'/0/0), Legacy single-address, SegWit single-address (P2SH). You can have many wallets in a single app at the same time.</p>
+                      <p><strong>blue wallet</strong> aims to support the maximum wallet standards. Currently supported: BIP44 (HD), BIP49 (HD SegWit),  BIP84 (HD bech32, native SegWit), BIP39 Breadwallet-compatible (m/0'/0/0), Legacy single-address, SegWit single-address (P2SH). You can have many wallets in a single app at the same time.</p>
                   </div>
               </div>
             <div class="row">
