add apk to the website

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0">
-    <meta name="description" content="Bitcoin and Lightning wallet for iOS and Android focus on security and UX. Open source, Segwit and HD wallets, lightning network, plausible deniability, replace by fee and full encryption">
+    <meta name="description" content="Bitcoin wallet and Lightning wallet for iOS and Android focus on security and UX. Open source, Segwit and HD wallets, lightning network, plausible deniability, replace by fee and full encryption">
     <meta name="author" content="Bluewallet Services S.R.L.">
 
-    <title>BlueWallet - Bitcoin and Lightning wallet for iOS and Android</title>
+    <title>BlueWallet - Bitcoin wallet and Lightning wallet for iOS and Android</title>
 
     <!-- Bootstrap core CSS -->
     <link href="ven/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -117,8 +117,8 @@
                     <img src="img/play-store-badge.svg" alt="play store link"></a></li>
                   </ul>
             </div>
-              <div class="desktop">
-              <a href="http://bit.ly/2NgcORc" target="_blank">Looking for a desktop wallet? Try out our friends at <strong>Bitlum</strong></a>
+              <div class="apk">
+              <a href="https://bluewallet.io/downloads/android/1560773178.apk">Don't have access to google play, download the APK here</a>
             </div>
           </div>
 
@@ -127,6 +127,7 @@
               <div class="bluebig"><img src="/img/bluewallet-big.png"></div>
         </div>
       </div>
+    </div>
     </header>
     <section class="features" id="features">
       <div class="container">
