add to second section

--- a/index.html
+++ b/index.html
@@ -280,8 +280,14 @@
               <a class="badge-link" href="https://itunes.apple.com/app/bluewallet-bitcoin-wallet/id1376878040" target="_blank"><img src="img/app-store-badge.svg" alt="app store link"></a>
               <a class="badge-link" href="https://play.google.com/store/apps/details?id=io.bluewallet.bluewallet" target="_blank"><img src="img/play-store-badge.svg" alt="play store link"></a>
             </div>
+            <br />
+            <div class="apk">
+              <a href="https://bluewallet.io/downloads/android/1560773178.apk">Don't have access to google play, download the APK here</a>
+            </div>
           </div>
+
         </div>
+
       </div>
     </section>
 
