add new featrues from 420

--- a/features.html
+++ b/features.html
@@ -88,15 +88,27 @@
             <p class="text-muted"></p>
         </div>
           <div class="col-md-10 mx-auto">
+            <div class="row">
+                <div class="feature-item">
+                  <h3 id="fullnode"><i class="fa fa-book"></i> Plug-in your Bitcoin Full node <span class="done">new</span></h3>
+                  <p>Ability to plug-in your own Bitcoin Full node through Electrum Personal Server (EPS), EclectrumX or Electrs. Don't trust, verify for a maximum sovereignty.</p> 
+                </div>
+            </div>
+            <div class="row">
+                <div class="feature-item">
+                  <h3 id="rbf-cpfp"><i class="fa fa-tags"></i> Bump and Cancel transactions <span class="done">new</span></h3>
+                  <p>Ability to Bump and Cancel sent transactions with "Replace-by-fee" (RBF) and ability to Bump received transactions with "Child-pays-for-parent" (CPFP) on Native Segwit wallets (bech32/BIP84).</p> 
+                </div>
+            </div>
              <div class="row">
                 <div class="feature-item">
-                  <h3 id="marketplace"><i class="fa fa-shopping-cart"></i> Lapps Marketplace <span class="done">new</span></h3>
+                  <h3 id="marketplace"><i class="fa fa-shopping-cart"></i> Lapps Marketplace </h3>
                   <p>A Lapp browser and a Maketplace of Lightning enabled apps to help you discover new services.</p> <a href="/lapps">Read more →</a>
                 </div>
             </div>
             <div class="row">
                 <div class="feature-item">
-                  <h3 id="lightning"><i class="fa fa-bolt"></i> Lightning Wallets <span class="done">new</span></h3>
+                  <h3 id="lightning"><i class="fa fa-bolt"></i> Lightning Wallets </h3>
                   <p>Wallets with support for the Lightning Network Protocol. Unfairly cheap and fast transactions. You can send, receive and refill your wallets. </p>
                   <a href="/lightning">Read more →</a>
                 </div>
@@ -129,7 +141,7 @@
             <div class="row">
                 <div class="feature-item">
                   <h3 id="segwit"><i class="icon-wrench"></i> SegWit</h3>
-                  <p>SegWit supported in P2SH-compatibility mode. Segwit was a massive upgrade to the Bitcoin Protocol released in 2017. You will find all wallets with SegWit enabled by default. Find more about <a href="https://segwit.org/" target="_blank">SegWit here</a>.</p>
+                  <p>SegWit supported in P2SH-compatibility mode and bech32 Native mode. Segwit was a massive upgrade to the Bitcoin Protocol released in 2017. You will find all wallets with SegWit enabled by default. Find more about <a href="https://segwit.org/" target="_blank">SegWit here</a>.</p>
                 </div>
             </div>
             <div class="row">
@@ -200,8 +212,8 @@
             </div>
             <div class="row">
                 <div class="feature-item">
-                  <h3></i>Plug your node</h3>
-                  <p>Plug your own Bitcoin Core node for a maximum sovereignty.</p>
+                  <h3></i>PSBT</h3>
+                  <p>Support for PSBT, BIP 174.</p>
                 </div>
             </div>
         </div>
