ADD: btc marketplace

--- a/buy-bitcoin-redirect.html
+++ b/buy-bitcoin-redirect.html
@@ -47,7 +47,7 @@
       jsonpCallback: "callback",
       dataType: "jsonp",
       error: function(){
-        window.location = 'https://old.changelly.com/?ref_id=rtagfcvnwiwvhm99';
+        window.location = 'https://changenow.io?link_id=7ccc7c1c261e17';
       },
       success: function( location ) {
         console.log('country_code', location.country_code);
@@ -62,7 +62,7 @@
           
           window.location = safello_url
         }  else {
-          window.location = 'https://old.changelly.com/?ref_id=rtagfcvnwiwvhm99';
+          window.location = 'https://changenow.io?link_id=7ccc7c1c261e17';
         }
       }
     });
