--- a/marketplace-btc/index.html
+++ b/marketplace-btc/index.html
@@ -76,6 +76,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="https://bitmedia.io/?r=xxpxWZniuO">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="">
+                    </div>
+                    <div class="apptext">
+                        <h2>Bitmedia.io</h2>
+                        <p>Сrypto ad marketplace - buy and sell traffic</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
 </div>
 
 <script>
