FIX: bitrefill onchain market

--- a/marketplace-btc/index.html
+++ b/marketplace-btc/index.html
@@ -82,7 +82,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div> <!-- section end -->
        
       <div class="row"> <!-- start -->
-            <a href="https://www.bitrefill.com/embed/lightning?ref=erF6mfho&utm_source=bluewallet">
+            <a href="https://www.bitrefill.com/?ref=erF6mfho">
                 <div class="grid-container">
                     <div class="appicon">
                         <img>
