--- a/marketplace-btc/index.html
+++ b/marketplace-btc/index.html
@@ -192,7 +192,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a href="https://shop.wikileaks.org/donate">
                 <div class="grid-container">
                     <div class="appicon">
-                        <img src="img/wikiLeaks.png">
+                        <img src="img/wikileaks.png">
                     </div>
                     <div class="apptext">
                         <h2>WikiLeaks</h2>
