small homepage fixes and updates

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                 <div class="row">
                   <a href="/features.html#segwit">
                     <div class="feature-item">
-                        <h3><i class="icon-wrench"></i> SegWit & HD wallets</h3>
-                        <p>SegWit supported and HD wallets enable</p>
+                        <h3><i class="icon-wrench"></i> Native SegWit & HD wallets</h3>
+                        <p>Native SegWit supported and HD wallets enable</p>
                     </div>
                   </a>
                 </div>
@@ -210,17 +210,17 @@
                   </a>
                 </div>
                 <div class="row">
-                  <a href="/features.html#rbf">
+                  <a href="/features.html#rbf-cpfp">
                     <div class="feature-item">
                         <h3><i class="icon-rocket"></i> Replace-By-Fee</h3>
-                        <p>(RBF) Speed-up your transactions by increasing the fee (BIP125)</p>
+                        <p>(RBF) Speed-up your transactions by increasing the fee</p>
                     </div>
                   </a>
                 </div>
                 <div class="row">
                   <a href="/features.html#watch-only">
                     <div class="feature-item">
-                        <h3><i class="icon-eye"></i> Watch-only wallets <span class="badge badge-primary">new</span></h3>
+                        <h3><i class="icon-eye"></i> Watch-only wallets</h3>
                         <p>Watch-only wallets allow you to keep an eye on your cold storage without touching the hardware.</p>
                     </div>
                   </a>
