--- a/features.html
+++ b/features.html
@@ -91,7 +91,7 @@
             <div class="row">
                 <div class="feature-item">
                   <h3 id="fullnode"><i class="fa fa-book"></i> Plug-in your Bitcoin Full node <span class="done">new</span></h3>
-                  <p>Ability to plug-in your own Bitcoin Full node through Electrum Personal Server (EPS), EclectrumX or Electrs. Don't trust, verify for a maximum sovereignty.</p> 
+                  <p>Ability to plug-in your own Bitcoin Full node through Electrum Personal Server (EPS), ElectrumX or Electrs. Don't trust, verify for a maximum sovereignty.</p> 
                 </div>
             </div>
             <div class="row">
