added Satoshis World

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -629,7 +629,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
 
-
+        <div class="row"> <!-- start -->
+            <a href="https://kriptode.com/satoshisworld/index.html?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/satoshisworld.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Satoshi's World</h2>
+                        <p>Write anywhere in the world with Lightning</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
 
 
 </div>
