--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -243,19 +243,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
-        <div class="row"> <!-- start -->
-            <a href="https://koalastud.io/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/chess.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Lightning Chess</h2>
-                        <p>Lightning Network-powered Online Chess</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
          <div class="row"> <!-- start -->
             <a href="https://whereisnakamoto.lngames.net/?utm_source=bluewallet">
                 <div class="grid-container">
@@ -297,14 +284,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://www.lightningduel.com/?utm_source=bluewallet">
+            <a href="https://lightning-poker.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
-                        <img src="img/lnduel.png">
+                        <img src="img/poker.png">
                     </div>
                     <div class="apptext">
-                        <h2>Bandit vs. Sheriff</h2>
-                        <p>Lightning Duel</p>
+                        <h2>Lightning Poker</h2>
+                        <p>No Accounts - Instant Payouts</p>
+                        <div class="new"></div>
                     </div>
                 </div>
             </a>
@@ -334,7 +322,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="apptext">
                         <h2>Niffler</h2>
                         <p>Cryptocurrency trading simulator</p>
-                        <div class="new"></div>
                     </div>
                 </div>
             </a>
@@ -392,6 +379,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
+         <div class="row"> <!-- start -->
+            <a href="https://kriptode.com/satoshisworld/index.html?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/satoshisworld.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Satoshi's World</h2>
+                        <p>Write anywhere in the world with Lightning</p>
+                        <div class="new"></div>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
         <div class="section"> <!-- section start -->
             <h3>Merchandising</h3>
         </div> <!-- section end -->
@@ -431,7 +432,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="apptext">
                         <h2>Crypto Brekkie</h2>
                         <p>Brekkie von Bitcoin</p>
-                        <div class="new"></div>
                     </div>
                 </div>
             </a>
@@ -531,19 +531,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://www.moonstuff.co/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/moonstuff.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Moonstuff</h2>
-                        <p>A novelity store</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-        <div class="row"> <!-- start -->
             <a href="https://layeronebtc.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
@@ -628,21 +615,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
-
-        <div class="row"> <!-- start -->
-            <a href="https://kriptode.com/satoshisworld/index.html?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/satoshisworld.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Satoshi's World</h2>
-                        <p>Write anywhere in the world with Lightning</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-
 
 </div>
 </body>
