--- a/marketplace-btc/index.html
+++ b/marketplace-btc/index.html
@@ -201,8 +201,30 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
-        
-        
+
+
+
+        <div class="section"> <!-- section start -->
+            <h3>Security</h3>
+        </div> <!-- section end -->
+
+
+
+        <div class="row"> <!-- start -->
+            <a href="https://shop.trezor.io/product/trezor-one-white?offer_id=14&aff_id=3344">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/trezor.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>TREZOR ONE White</h2>
+                        <p>The most trusted hardware wallet in the world. Get yours today!</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+
 </div>
 
 <script>
