--- a/features.html
+++ b/features.html
@@ -90,6 +90,12 @@
           <div class="col-md-10 mx-auto">
             <div class="row">
                 <div class="feature-item">
+                  <h3 id="batching"><i class="fa fa-folder"></i> Batch Transactions <span class="done">new</span></h3>
+                  <p>This feature allows you to send multiple transactions in one batch. This is useful if you have two or more transactions that you want to make and spend less fees. All the transaction will be batched in a single transaction fee, making it less expensive for the sender and also they will spend less space on the blockchain. So a win-win for the bitcoin network and for the users.</p> 
+                </div>
+            </div>
+            <div class="row">
+                <div class="feature-item">
                   <h3 id="fullnode"><i class="fa fa-book"></i> Plug-in your Bitcoin Full node <span class="done">new</span></h3>
                   <p>Ability to plug-in your own Bitcoin Full node through Electrum Personal Server (EPS), ElectrumX or Electrs. Don't trust, verify for a maximum sovereignty.</p> 
                 </div>
@@ -194,8 +200,8 @@
         <div class="col-md-10 mx-auto">
             <div class="row">
                 <div class="feature-item">
-                  <h3></i>Batch TX</h3>
-                  <p>Ability to pay multiple addressess with a single transaction. Save on fees and optimize blockspace usage.</p>
+                  <h3></i>BTCPay Server</h3>
+                  <p>Point-of-sale system integrated with the BTCPay Server stack. An opensource solution to run Bitcoin merchant related services.</p>
                 </div>
             </div>
             <div class="row">
