--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -59,6 +59,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3>Services</h3>
         </div> <!-- section end -->
         <div class="row"> <!-- start -->
+            <a href="https://www.xsats.com">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/xsats.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>xsats</h2>
+                        <p>Buy bitcoin via bank transfer instantly.</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
             <a href="https://www.bitrefill.com/embed/lightning?ref=erF6mfho&utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
