--- a/marketplace-btc/index.html
+++ b/marketplace-btc/index.html
@@ -48,6 +48,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="https://www.xsats.com">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/xsats.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Buy Bitcoin with xsats</h2>
+                        <p>Instantly, via bank transfer and even lower fees. <br> Buy once or automatically save bitcoin.</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
        
 
         <div class="row"> <!-- start -->
