--- a/buy-bitcoin-redirect.html
+++ b/buy-bitcoin-redirect.html
@@ -3,9 +3,6 @@
 <head>
   <title></title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <noscript>
-    <meta http-equiv="Refresh" content="0;URL=https://old.changelly.com/?ref_id=rtagfcvnwiwvhm99"/>
-  </noscript>
   <style>
     .lds-dual-ring {
       display: block;
@@ -62,7 +59,7 @@
           
           window.location = safello_url
         }  else {
-          window.location = 'https://changenow.io?link_id=7ccc7c1c261e17';
+          window.location = safello_url
         }
       }
     });
