--- a/buy-bitcoin-redirect.html
+++ b/buy-bitcoin-redirect.html
@@ -37,7 +37,7 @@
 <body>
   <div class="lds-dual-ring"></div>
   <script>
-    var safello_countries = ["SE", "GB", "AD", "AT", "AX", "BE", "CH", "CZ", "DE", "DK", "EE", "ES", "FI", "FR", "GG", "GI", "GR", "HR", "HU", "IE", "IM", "IS", "IT", "JE", "LI", "LT", "LU", "LV", "MC", "ME", "MT", "NL", "NO", "PL", "PT", "SI", "SK", "SM", "IC"];
+    var safello_countries = ["SE", "GB", "AD", "AT", "AX", "BE", "CH", "CZ", "DE", "DK", "EE", "ES", "FI", "FR", "GG", "GI", "GR", "HR", "HU", "IE", "IM", "IS", "IT", "JE", "LI", "LT", "LU", "LV", "MC", "ME", "MT", "NL", "NO", "PL", "PT", "SI", "SK", "SM", "IC", "US"];
     var u = new URLSearchParams(window.location.search);
     var address = u.get('address') || '';
     var safello_state_token = u.get('safelloStateToken')
