--- a/lightning/index.html
+++ b/lightning/index.html
@@ -90,7 +90,7 @@
         </div>
           <div class="col-lg-12 my-auto">
             <div class="row">
-               <p class="lcontent text-center">On Bluewallet, you can use <strong>custodial Lightning wallets (or choose to run your own node)</strong>, that allows you to seamlessly use the Lightning Network for payments, without the need to open channels, be online, provide liquidity or operate and mantain a node. Our goal is to remove friction and provide a great user experience. This trade off comes with pros and cons, please read more about them on the <a href="https://medium.com/bluewallet/bluewallet-brings-zero-configuration-lightning-payments-to-ios-and-android-30137a69f071" target="_blank">LNDhub announcement article</a>.</p>
+               <p class="lcontent text-center">On Bluewallet, you can use <strong>hosted Lightning wallets (or connect to your own node)</strong>, that allows you to seamlessly use the Lightning Network for payments, without the need to open channels, be online, provide liquidity or operate and mantain a node. Our goal is to remove friction and provide a great user experience. This trade off comes with pros and cons, please read more about them on the <a href="https://medium.com/bluewallet/bluewallet-brings-zero-configuration-lightning-payments-to-ios-and-android-30137a69f071" target="_blank">LNDhub announcement article</a>.</p>
             </div>
             <div class="row imghero">
                <img src="../img/lightning-wallet2.png">
