--- a/marketplace-btc/index.html
+++ b/marketplace-btc/index.html
@@ -217,6 +217,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div> <!-- end -->
 
 
+        <div class="row"> <!-- start -->
+            <a href="https://freeross.org/donate/">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="">
+                    </div>
+                    <div class="apptext">
+                        <h2>Free Ross!</h2>
+                        <p>Ross Ulbricht is a first-time offender serving two life sentences without parole + 40 years for all non-violent charges associated with creating the Silk Road website</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+
+
 
         <div class="section"> <!-- section start -->
             <h3>Security</h3>
