--- a/marketplace-btc/index.html
+++ b/marketplace-btc/index.html
@@ -125,7 +125,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div> <!-- section end -->
        
       <div class="row"> <!-- start -->
-            <a href="https://www.bitrefill.com/embed/bitcoin?ref=erF6mfho&utm_source=bluewallet">
+            <a href="https://www.bitrefill.com/embed/bitcoin?ref=erF6mfho&showPaymentInfo=true&utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                          <img src="img/bitrefill.png">
