--- a/index.html
+++ b/index.html
@@ -364,10 +364,10 @@
         <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="/privacy.txt">Privacy</a>
+            <a href="/privacy">Privacy</a>
           </li>
           <li class="list-inline-item">
-            <a href="/terms.txt">Terms</a>
+            <a href="/tos">Terms</a>
           </li>
         </ul>
       </div>
