ADD: testpage qrs

--- a/testpage/index.html
+++ b/testpage/index.html
@@ -84,6 +84,32 @@
 		<br/>
 
 
+		<h2>Single address with transactions: </h2>		
+
+		<div class="row">
+		    <div class="col-sm">
+		      <img src="bc1quhnve8q4tk3unhmjts7ymxv8cd6w9xv8wy29uv.png"/>
+		      <br/>
+		      BITCOIN:bc1quhnve8q4tk3unhmjts7ymxv8cd6w9xv8wy29uv
+		  </div>
+		  <div class="col-sm">
+		      <img src="3NLnALo49CFEF4tCRhCvz45ySSfz3UktZC.png"/>
+		      <br/>
+		      bitcoin:3NLnALo49CFEF4tCRhCvz45ySSfz3UktZC
+		  </div>
+		  <div class="col-sm">
+		      <img src="12eQ9m4sgAwTSQoNXkRABKhCXCsjm2jdVG.png"/>
+		      <br/>
+		      bitcoin:12eQ9m4sgAwTSQoNXkRABKhCXCsjm2jdVG
+		  </div>
+		  <div class="col-sm">
+		      <img src="BC1QUHNVE8Q4TK3UNHMJTS7YMXV8CD6W9XV8WY29UV_caps.png"/>
+		      <br/>
+		      bitcoin:BC1QUHNVE8Q4TK3UNHMJTS7YMXV8CD6W9XV8WY29UV (caps)
+		  </div>
+		</div>
+
+
 		
 		
 	</div>
