--- a/index.html
+++ b/index.html
@@ -73,29 +73,32 @@
           <img src="img/logo-bluewallet.svg" alt="BlueWallet - Bitcoin and Lightning Wallet">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/">Home</a>
-            </li>
+                <a class="nav-link js-scroll-trigger" href="/">Home</a>
+              </li>
               <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="/features.html">Features</a>
-                  <ul>
-                    <li><a class="sublink" href="/features.html">View all</a></li>
-                    <li><a class="sublink" href="/bitcoin-wallet">Bitcoin Wallets</a></li>
-                    <li><a class="sublink" href="/lightning">Lightning Wallets</a></li>
-                     <li><a class="sublink" href="/watch-only">Watch-only Wallets</a></li>
-                    <li><a class="sublink" href="/lapps">Lapp Marketplace</a></li> 
-                    <li><a class="sublink" href="/watch-app">Watch App</a></li> 
-                  </ul>
+                  <a class="nav-link btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Features
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  
+                    <a class="sublink" href="/features.html">View all</a>
+                    <a class="sublink" href="/bitcoin-wallet">Bitcoin Wallets</a>
+                    <a class="sublink" href="/lightning">Lightning Wallets</a>
+                     <a class="sublink" href="/watch-only">Watch-only Wallets</a>
+                    <a class="sublink" href="/lapps">Lapp Marketplace</a> 
+                    <a class="sublink" href="/watch-app">Watch App</a> 
+                  
               </li>
              <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="http://help.bluewallet.io">Help</a>
             </li>
           </ul>
+        </div>
         </div>
       </div>
     </nav>
@@ -105,8 +108,8 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1>Bitcoin should be <strong>fun</strong>, usable and <strong>for everyone</strong></h1>
-                <h2 class="mb-5">Your <span class="light-blue">Bitcoin wallet</span></h2>
+              <h2>Bitcoin should be <strong>fun</strong>, usable and <strong>for everyone</strong></h2>
+                <h1 class="mb-5">Your <span class="light-blue">Bitcoin wallet</span></h1>
                   <ul class="list-unstyled cta">
                     <li><a class="badge-link2" href="https://itunes.apple.com/app/bluewallet-bitcoin-wallet/id1376878040" target="_blank">
                     <img src="img/app-store-badge.svg" alt="app store link"></a></li>
