ADD: zpub to testpage

--- a/testpage/index.html
+++ b/testpage/index.html
@@ -76,12 +76,8 @@
 
 
 		<a href="https://lnurl.bigsun.xyz"><h2>lnurl playground</h2></a>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
+		
+		<br/> <br/> <br/> <br/> <br/> <br/>
 
 
 		<h2>Single address with transactions: </h2>		
@@ -101,6 +97,18 @@
 		      <img src="12eQ9m4sgAwTSQoNXkRABKhCXCsjm2jdVG.png"/>
 		      <br/>
 		      bitcoin:12eQ9m4sgAwTSQoNXkRABKhCXCsjm2jdVG
+		  </div>
+		</div>
+
+		<br/> <br/> <br/> <br/> <br/> <br/>
+
+		<h2>Extended pubkey with transactions: </h2>		
+
+		<div class="row">
+		    <div class="col-sm">
+		      <img src="zpub6r7jhKKm7BAVx3b3nSnuadY1WnshZYkhK8gKFoRLwK9rF3Mzv28BrGcCGA3ugGtawi1WLb2vyjQAX9ZTDGU5gNk2bLdTc3iEXr6tzR1ipNP.gif"/>
+		      <br/>
+		      zpub6r7jhKKm7BAVx3b3nSnuadY1WnshZYkhK8gKFoRLwK9rF3Mzv28BrGcCGA3ugGtawi1WLb2vyjQAX9ZTDGU5gNk2bLdTc3iEXr6tzR1ipNP
 		  </div>
 		</div>
 
