fix features page

--- a/watch-only/index.html
+++ b/watch-only/index.html
@@ -81,7 +81,7 @@
                   Features
                   </a>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="sublink" href="/features.html">View all</a>
+                    <a class="sublink" href="/features">View all</a>
                     <a class="sublink" href="/bitcoin-wallet">Bitcoin Wallets</a>
                     <a class="sublink" href="/watch-only">Watch-only Wallets</a>
                     <a class="sublink" href="/lightning">Lightning Wallets</a>
