--- a/donate.html
+++ b/donate.html
@@ -84,7 +84,7 @@
                   Features
                   </a>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="sublink" href="/features.html">View all</a>
+                    <a class="sublink" href="/features">View all</a>
                     <a class="sublink" href="/bitcoin-wallet">Bitcoin Wallets</a>
                     <a class="sublink" href="/watch-only">Watch-only Wallets</a>
                     <a class="sublink" href="/lightning">Lightning Wallets</a>
@@ -133,7 +133,7 @@
                 <div class="tippin text-center">
                   <h5>Off-chain (Lightning)</h5>
                   <!-- Beginning of tippin.me Button -->
-                  <div id="tippin-button" data-dest="bluewalletio"></div>
+                  <div style="display: inline-block;" id="tippin-button" data-dest="bluewalletio"></div>
                   <script src="https://tippin.me/buttons/tip.js" type="text/javascript"></script>
                   <!-- End of tippin.me Button -->
                 </div>
