--- a/privacy/index.html
+++ b/privacy/index.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Lightning Wallet for your Bitcoin wallet available for iOS and android">
     <meta name="author" content="Bluewallet Services S.R.L.">
 
-    <title>Lightning Wallet - Bluewallet Bitcoin wallet for iOS and Android</title>
+    <title>Privacy Policy - Bluewallet Bitcoin wallet for iOS and Android</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../ven/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -84,7 +84,7 @@
                   Features
                   </a>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="sublink" href="/features.html">View all</a>
+                    <a class="sublink" href="/features">View all</a>
                     <a class="sublink" href="/bitcoin-wallet">Bitcoin Wallets</a>
                     <a class="sublink" href="/watch-only">Watch-only Wallets</a>
                     <a class="sublink" href="/lightning">Lightning Wallets</a>
@@ -112,35 +112,20 @@
     </nav>
 
   <section class="privacy" id="privacy">
-      <div class="container">
-        <h2>Privavy policy</h2>
+     <div class="container">
+        <div class="row justify-content-md-center">
+          <div class="col-md-9">
+            <h2>Privavy policy</h2>
 
 <p>This Privacy policy describes the privacy practices that are applicable to your use of the Bluewallet mobile application (the “App”) provided by Bluewallet Services (the “Company”).</p>
 
 <p>No Use by Children. The App is not intended for use by children under the age of thirteen (13). If you are under the age of thirteen (13), please do not use the App.</p>
 
+<p>The Company does not collect, use or share any personal information about you when you use the App. The Company also does not allow third parties to collect personal information about you when you use the App, or to use tracking technology to track your use of the App.</p> 
 
-<p>What personal information do we collect from the people that visit our blog, website or app?</p>
+<p>Any information that you provide to us when you communicate with our customer or technical support, will only be used for purposes of addressing your specific support request.</p>
 
-<p>We do not collect information from visitors of our site.
-or other details to help you with your experience.</p>
-
-<p>When do we collect information?</p>
-
-<p>We collect information from you when you or enter information on our site.</p>
-
-<p>How do we use your information?</p>
-
-<p>We may use the information we collect from you when you register, make a purchase, sign up for our newsletter, respond to a survey or marketing communication, surf the website, or use certain other site features in the following ways:</p>
-
-<p>How do we protect your information?</p>
-
-<p>We do not use vulnerability scanning and/or scanning to PCI standards.<br />
-We only provide articles and information. We never ask for credit card numbers.</p>
-
-<p>Third-party disclosure</p>
-
-<p>We do not sell, trade, or otherwise transfer to outside parties your Personally Identifiable Information.</p>
+<p>Third Party App Stores. If you purchase or access the App through a third party app store, such as iTunes or Google Play (an “App Store”), you will have a separate, additional account relationship with that App Store and the information you provide to that App Store will be handled in accordance with the privacy practices of the applicable App Store. App Stores are not partners or representatives of the Company and the Company is not responsible for the acts or omissions of an App Store with regard to the collection, use, maintenance or disclosure of your information. If you want to change your preferences with regard to how an applicable App Store collects or uses your information, you should review the privacy practices of the applicable App Store and adjust your privacy or other settings directly through the applicable App Store. The Company will not receive or have access to any of the information you provide to, or that is collected by, an applicable App Store.</p>
 
 <p>Creators of BlueWallet never received any inquiries from NSA, FBI, FSB or any other government institution.</p>
 
@@ -171,14 +156,14 @@ Send you the updates you subscribe for.
 <p>If at any time you would like to unsubscribe from receiving future emails, you can email us at
 bluewallet@bluewallet.io and we will promptly remove you from ALL correspondence.</p>
 
-<p>Contacting Us</p>
-
 <p>If there are any questions regarding this privacy policy, you may contact us using the information below.</p>
 
 <p>bluewallet@bluewallet.io</p>
 
 <p>Last Edited on 2019-10-16</p>
+          </div>
         </div>
+      </div>
     </section>
 
 <footer>
